Moved ADAM content

--- a/packages.bib
+++ b/packages.bib
@@ -3,31 +3,80 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2021},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  note = {https://github.com/rstudio/bookdown, https://pkgs.rstudio.com/bookdown/},
-  year = {2021},
+  year = {2023},
+  note = {R package version 0.33},
+  url = {https://CRAN.R-project.org/package=bookdown},
+}
+
+@Manual{R-greybox,
+  title = {greybox: Toolbox for Model Building and Forecasting},
+  author = {Ivan Svetunkov},
+  year = {2023},
+  note = {R package version 1.0.9.41001},
+  url = {https://github.com/config-i1/greybox},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  note = {R package version 1.33.7},
+  year = {2023},
+  note = {R package version 1.42},
   url = {https://yihui.org/knitr/},
-  year = {2021},
+}
+
+@Manual{R-latex2exp,
+  title = {latex2exp: Use LaTeX Expressions in Plots},
+  author = {Stefano Meschiari},
+  year = {2022},
+  note = {R package version 0.9.6},
+  url = {https://CRAN.R-project.org/package=latex2exp},
+}
+
+@Manual{R-legion,
+  title = {legion: Forecasting Using Multivariate Models},
+  author = {Ivan Svetunkov and Kandrika Fadhlan Pritularga},
+  year = {2023},
+  note = {R package version 0.1.2.41008},
+  url = {https://github.com/config-i1/legion},
+}
+
+@Manual{R-pracma,
+  title = {pracma: Practical Numerical Math Functions},
+  author = {Hans W. Borchers},
+  year = {2022},
+  note = {R package version 2.4.2},
+  url = {https://CRAN.R-project.org/package=pracma},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2021},
-  note = {R package version 2.10},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2023},
+  note = {R package version 2.21},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-smooth,
+  title = {smooth: Forecasting Using State Space Models},
+  author = {Ivan Svetunkov},
+  year = {2023},
+  note = {R package version 3.2.1.41007},
+  url = {https://github.com/config-i1/smooth},
+}
+
+@Manual{R-vioplot,
+  title = {vioplot: Violin Plot},
+  author = {Daniel Adler and S. Thomas Kelly and Tom M. Elliott and Jordan Adamson},
+  year = {2022},
+  note = {R package version 0.4.0},
+  url = {https://github.com/TomKellyGenetics/vioplot},
 }
 
 @Book{bookdown2016,
@@ -59,7 +108,6 @@
   publisher = {Chapman and Hall/CRC},
   year = {2014},
   note = {ISBN 978-1466561595},
-  url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
 @Book{rmarkdown2018,
@@ -68,7 +116,7 @@
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
-  note = {ISBN 9781138359338},
+  isbn = {9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
@@ -78,7 +126,7 @@
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2020},
-  note = {ISBN 9780367563837},
+  isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
