--- a/index.Rmd
+++ b/index.Rmd
@@ -1,60 +1,118 @@
 --- 
-title: "A Chapman & Hall/CRC Book Example Using bookdown"
-author: "Frida Gomam"
+title: "Forecasting and Analytics with ADAM"
+author: "Ivan Svetunkov"
 date: "`r Sys.Date()`"
-documentclass: krantz
-bibliography: [book.bib, packages.bib]
-biblio-style: apalike
-link-citations: yes
-colorlinks: yes
-lot: yes
-lof: yes
 site: bookdown::bookdown_site
-description: "A book example for a Chapman & Hall book."
-github-repo: yihui/bookdown-crc
-graphics: yes
-#cover-image: images/cover.jpg
+output: bookdown::gitbook
+documentclass: book
+bibliography: [library.bib, packages.bib, websites.bib]
+csl: elsevier-harvard.csl
+biblio-style: elsarticle-harv
+link-citations: true
+github-repo: config-i1/adam
+description: "This monograph explains how to do time series analysis and forecasting using Augmented Dynamic Adaptive Model, implemented in smooth package for R."
 ---
-
-```{r setup, include=FALSE}
-options(
-  htmltools.dir.version = FALSE, formatR.indent = 2, width = 55, digits = 4
-)
-
-# install the packages needed by this book; you fill out c(), e.g. c('ggplot2', 'dplyr')
-lapply(c('xfun'), function(pkg) {
-  if (system.file(package = pkg) == '') install.packages(pkg)
-})
-```
 
 # Preface {-}
 
-Hi there, this is my great book.
-
-## Why read this book {-}
-
-It is very important...
-
-## Structure of the book {-}
-
-Chapters \@ref(introduction) introduces a new topic, and ...
-
-## Software information and conventions {-}
-
-I used the **knitr**\index{knitr} package [@xie2015] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. My R session information is shown below:
-
-```{r}
-xfun::session_info()
+```{r ADAMFSM, echo=FALSE, out.width='60%', fig.align='center'}
+knitr::include_graphics("images/Adam-Title-web.jpg")
 ```
 
-Package names are in bold text (e.g., **rmarkdown**), and inline code and filenames are formatted in a typewriter font (e.g., `knitr::knit('foo.Rmd')`). Function names are followed by parentheses (e.g., `bookdown::render_book()`).
+### Who is this book for? {-}
 
-## Acknowledgments {-}
+This monograph assumes that the reader has a good understanding of statistics and a good knowledge of regression analysis. Some Chapters rely on more advanced topics, including likelihood and information criteria. These are explained, for example, in @SvetunkovSBA. Some parts of the book also use linear algebra to show how various properties of state space models are derived. However, these can be skipped by a reader who is not comfortable with higher maths without losing in the understanding of the main idea of models. Furthermore, while the monograph is self-sufficient to a large extent, it does not contain a detailed discussion of special cases of state space models (e.g. local level model is only discussed in passing in Section \@ref(SESandETS), while the local trend is covered in Section \@ref(ETSExamples)). The reader interested in knowing more about some special cases is referred to the @Hyndman2008b monograph. Finally, while the monograph starts with the basics of forecasting and explains some of the simple forecasting techniques, it does not cover these in detail. A good book covering the fundamentals of forecasting is @Ord2017.
 
-A lot of people helped me when I was writing the book.
+In a more wide sense, this book is written for data scientists, computer scientists, data, business and marketing analysts who work in forecasting or want to learn more about univariate forecasting using statistical models.
 
-```{block2, type='flushright', html.tag='p'}
-Frida Gomam  
-on the Mars
+
+### What is ADAM? {-}
+
+ADAM stands for "Augmented Dynamic Adaptive Model". The term "adaptive model" means that the parameters of the model change over time according to some assumed process. The word "dynamic" reflects the idea that the model has time series related components (ETS, ARIMA). Finally, the word "augmented" is included because ADAM is the model that supports additional features not included in the conventional ETS/ARIMA. ADAM is a unified framework for constructing ETS / ARIMA / regression, based on more advanced statistical instruments. For example, classical ARIMA is built on the assumption of normality of the error term, but ADAM lifts this assumption and allows using [other distributions](#distributions) as well (e.g. Generalised Normal, Inverse Gaussian etc). Another example, typically the conventional models are estimated either via the maximisation of the likelihood function or using basic losses like [MSE or MAE](#errorMeasures), but ADAM includes a broader spectrum of losses and allows using custom ones. There is much more, and we will discuss different aspects of ADAM in detail later in this monograph. The ADAM includes:
+
+1. ETS;
+2. ARIMA;
+3. Regression;
+4. TVP regression;
+5. Combination of (1), (2) and either (3), or (4);
+6. Automatic selection/combination of states for ETS;
+7. Automatic orders selection for ARIMA;
+8. Variables selection for regression;
+9. Normal and non-normal distributions;
+10. Automatic selection of most suitable distributions;
+11. Multiple seasonality;
+12. Occurrence part of the model to handle zeroes in data (intermittent demand);
+13. Modelling scale of distribution (GARCH and beyond);
+14. Handling uncertainty of estimates of parameters.
+
+All these extensions are needed to solve specific real life problems, so we will include examples and case studies later in the book to see how all of this can be used. The `adam()` function from `smooth` package for R implements ADAM and supports the following features:
+
+1. Model diagnostics using `plot()` and other methods;
+2. Confidence intervals for parameters of models;
+3. Automatic outliers detection;
+4. Handling missing data;
+5. Fine-tuning of persistence vector (smoothing parameters);
+6. Fine-tuning of initial values of the state vector (e.g. level / trend / seasonality);
+7. Two initialisation options (optimal / backcasting);
+8. Advanced and custom loss functions;
+9. Manual patameters for ETS, ARMA and regression;
+10. Fine-tuning of the optimiser (selection of optimisation algorithm and convergence criteria);
+11. Scale model via the `sm()` method.
+
+This monograph uses two packages from R, namely `greybox`, which focuses on forecasting using regression models, and `smooth`, which implements Single Source of Error (SSOE) state space models for time series analysis and forecasting. The monograph focuses on explaining how ADAM, one of the `smooth` functions (introduced in v3.0.0) works, also showing how it can be used in practice with examples from R.
+
+
+If you want to run examples from the monograph, two R packages are needed [@R-greybox; @R-smooth]:
+```{r eval=FALSE}
+install.packages("greybox")
+install.packages("smooth")
 ```
 
+Some explanations of functions from the packages are given in my blog: [Package greybox for R](https://forecasting.svetunkov.ru/en/category/r-en/greybox/), [Package smooth for R](https://forecasting.svetunkov.ru/en/category/r-en/smooth/).
+
+An important thing to note is that this monograph **does not use `tidyverse` packages**. I like base R, and, to be honest, I am sure that `tidyverse` packages are great, but I have never needed them in my research. So, I will not use pipeline operators, `tibble` or `tsibble` objects and `ggplot2`. I assume throughout the monograph that you can do all those nice tricks on your own if you want to.
+
+```{r include=FALSE}
+# automatically create a bib database for R packages
+knitr::write_bib(c(
+  .packages(), 'bookdown', 'knitr', 'rmarkdown', 'smooth', 'greybox', 'vioplot', 'pracma', 'legion'
+), 'packages.bib')
+# Load the necessary packages
+library("latex2exp")
+library("kableExtra")
+library("statmod")
+library("pracma")
+library("greybox")
+library("smooth")
+library("vioplot")
+```
+
+
+### How to cite ADAM {-}
+
+You can use the following to cite the online version of this book:
+
+::: adamCitation
+- Svetunkov, I. (2022) Forecasting and Analytics with ADAM. Monograph. OpenForecast. Lancaster, UK. www.openforecast.org/adam. Accessed on [current date].
+:::
+
+If you use LaTeX, the following can be used instead:
+
+```{r eval=FALSE}
+@MISC{SvetunkovAdam,
+    title = {Forecasting and Analytics with ADAM},
+    author = {Ivan Svetunkov},
+    howpublished = {Monograph. OpenForecast},
+    note = {(version: [current date])},
+    url = {https://openforecast.org/adam/},
+    year = {2022}
+}
+```
+
+
+### License {-}
+
+This monograph is licensed under [Creative Common License by-nc-sa 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/), which means that you can share, copy, redistribute and remix the content of the monograph for non-commercial purposes as long as you give appropriate credit to the author and provide the link to the original license. If you remix, transform, or build upon the material, you must distribute your contributions under the same CC-BY-NC-SA 4.0 license. See [the explanation on the Creative Commons website](https://creativecommons.org/licenses/by-nc-sa/4.0/).
+
+### Acknowledgments {-}
+I would like to thank Robert Fildes for his comments about this book and helping in shaping it into a monograph and J. Keith Ord for his invaluable suggestions for improvement of the monograph. I also would like to thank Tobias Schmidt and Benedikt Sonnleitner for correcting grammatical mistakes.
