--- a/11-ADAM-Estimation.Rmd
+++ b/11-ADAM-Estimation.Rmd
@@ -39,9 +39,6 @@ Maximum Likelihood Estimation (MLE) is one of the popular approaches for estimat
 MLE of the ADAM relies on the distributional assumptions of each specific model and might differ from one model to another (see assumptions in Sections \@ref(ADAMETSAdditiveDistributions), \@ref(ADAMETSMultiplicativeDistributions) and \@ref(ADAMARIMADistributions)). There are several options for the `distribution` supported by the `adam()` function in the `smooth` package, here we briefly discuss how the estimation is done for each one of them. We start with the additive error model, for which the assumptions, log-likelihoods and MLE of scales are provided in Table \@ref(tab:additiveErrorLikelihoods).
 
 ```{r echo=FALSE}
-if (knitr:::is_latex_output()) {
-    knitr::asis_output('\\begin{landscape}')
-}
 # Assumption | log-likelihood \ell(\boldsymbol{\theta}, {\sigma}_\epsilon^2 | \mathbf{y}) | Scale
 # Normal distribution
 distributionsTable <- c("$\\epsilon_t \\sim \\mathcal{N}(0, \\sigma^2)$",
@@ -89,10 +86,7 @@ distributionsTable <- matrix(distributionsTable, 7, 3, byrow=TRUE,
                                          c("\\textbf{Assumption}","\\textbf{log-likelihood}","\\textbf{MLE of scale}")))
 kableTable <- kableExtra::kable(distributionsTable, escape=FALSE, caption="Likelihood approach for additive error models. $\\mathcal{N}$ is the Normal, $\\mathcal{L}$ is the Laplace, $\\mathcal{S}$ is the S, $\\mathcal{GN}$ is the Generalised Normal, $\\mathcal{IG}$ is the Inverse Gaussian, $\\Gamma$ is the Gamma, and $\\mathrm{log}\\mathcal{N}$ is the Log-Normal distribution.",
                                 col.names=c("Assumption","log-likelihood","MLE of scale"), label="additiveErrorLikelihoods")
-kableExtra::kable_styling(kableTable, font_size=12, protect_latex=TRUE, latex_options="scale_down")
-if (knitr:::is_latex_output()) {
-    knitr::asis_output('\\end{landscape}')
-}
+kableExtra::kable_styling(kableTable, font_size=12, protect_latex=TRUE, latex_options="scale_down", table.envir="sidewaystable")
 ```
 
 The likelihoods are derived based on the probability density functions, by taking the logarithms of their products for all in-sample observations. For example, this is what we get for the Normal distribution:
@@ -141,9 +135,6 @@ Similar logic is applicable to Laplace ($\mathcal{L}$), Generalised Normal ($\ma
 All the likelihoods for the multiplicative error models are summarised in Table \@ref(tab:multiplicativeErrorLikelihoods).
 
 ```{r echo=FALSE}
-if (knitr:::is_latex_output()) {
-    knitr::asis_output('\\begin{landscape}')
-}
 # Assumption | log-likelihood \ell(\boldsymbol{\theta}, {\sigma}_\epsilon^2 | \mathbf{y}) | Scale
 # Normal distribution
 distributionsTable <- c("$\\epsilon_t \\sim \\mathcal{N}(0, \\sigma^2)$",
@@ -194,10 +185,7 @@ distributionsTable <- matrix(distributionsTable, 7, 3, byrow=TRUE,
                                          c("\\textbf{Assumption}","\\textbf{log-likelihood}","\\textbf{MLE of scale}")))
 kableTable <- kableExtra::kable(distributionsTable, escape=FALSE, caption="Likelihood approach for multiplicative error models. $\\mathcal{N}$ is the Normal, $\\mathcal{L}$ is the Laplace, $\\mathcal{S}$ is the S, $\\mathcal{GN}$ is the Generalised Normal, $\\mathcal{IG}$ is the Inverse Gaussian, $\\Gamma$ is the Gamma, and $\\mathrm{log}\\mathcal{N}$ is the Log-Normal distribution.",
                                 col.names=c("Assumption","log-likelihood","MLE of scale"), label="multiplicativeErrorLikelihoods")
-kableExtra::kable_styling(kableTable, font_size=12, protect_latex=TRUE, latex_options="scale_down")
-if (knitr:::is_latex_output()) {
-    knitr::asis_output('\\end{landscape}')
-}
+kableExtra::kable_styling(kableTable, font_size=12, protect_latex=TRUE, latex_options="scale_down", table.envir="sidewaystable")
 ```
 
 When it comes to practicalities, the optimiser in `adam()` function calculates the scale from Tables \@ref(tab:additiveErrorLikelihoods) and \@ref(tab:multiplicativeErrorLikelihoods) on each iteration and then uses it in the log-likelihood based on the respective distribution function. For additive error models:
