--- a/12-ADAM-ETS-Multiple-Frequencies.Rmd
+++ b/12-ADAM-ETS-Multiple-Frequencies.Rmd
@@ -27,7 +27,7 @@ where $m_i$ is the $i$-th seasonal periodicity. While, in theory, there can be c
 1. Additive seasonality:
 \begin{equation}
   \begin{aligned}
-    & {y}_{t} = \hat{y}_t + s_{1,t-m_1} + \dots + s_{n,t-m_n} \epsilon_t \\
+    & {y}_{t} = \breve{y}_t + s_{1,t-m_1} + \dots + s_{n,t-m_n} \epsilon_t \\
     & \vdots \\
     & s_{1,t} = s_{1,t-m_1} + \gamma_1 \epsilon_t \\
     & \vdots \\
@@ -40,7 +40,7 @@ where $\hat{y}_t$ is the point value based on all non-seasonal components (e.g. 
 2. Multiplicative seasonality:
 \begin{equation}
   \begin{aligned}
-    & {y}_{t} = \hat{y}_t \times s_{1,t-m_1} \times \dots \times s_{n,t-m_n} \times(1+\epsilon_t) \\
+    & {y}_{t} = \breve{y}_t \times s_{1,t-m_1} \times \dots \times s_{n,t-m_n} \times(1+\epsilon_t) \\
     & \vdots \\
     & s_{1,t} = s_{1,t-m_1} (1 + \gamma_1 \epsilon_t) \\
     & \vdots \\
@@ -63,9 +63,9 @@ Another issues with the models \@ref(eq:ETSADAMAdditiveSeasonality) and \@ref(eq
 While the main principles of model estimation discussed in Chapter \@ref(ADAMETSEstimation) can be widely used for the multiple seasonal models, there are some specific aspects that require additional attention. They mainly apply to ADAM ETS and to ADAM ARIMA.
 
 ### ADAM ETS issues
-Estimating a multiple seasonal ETS model is challenging because it implies a large optimisation task. The number of parameters related to seasonal components is equal in general to $\sum_{j=1}^n m_j + n$: $\sum_{j=1}^n m_j$ initial values and $n$ smoothing parameters. For example, in case of hourly data, a triple seasonal model for hours of day, hours of week and hours of year will have: $m_1 = 24$, $m_2 = 24 \times 7 = 168$ and $m_3= 7 \times 24 \times 365 = 61320$, resulting overall in $24 + 168 + 61320 + 3 = 61498$ parameters related to seasonal components to estimate. This is not a trivial task and would take hours to converge to optimum unless the pre-initials (Section \@ref(ADAMInitialisation)) are already close to optimum. So, if you want to construct multiple seasonal ADAM ETS model, it makes sense to use a different initialisation (see discussion in Section \@ref(ADAMInitialisation)), reducing the number of estimated parameters. A possible solution in this case is backcasting (Subsection \@ref(ADAMInitialisationOptAndBack)). The number of parameters in our example would reduce from 61498 to 3 (smoothing parameters), substantially speeding up the model estimation process.
+Estimating a multiple seasonal ETS model is challenging because it implies a large optimisation task. The number of parameters related to seasonal components is equal in general to $\sum_{j=1}^n m_j + n$: $\sum_{j=1}^n m_j$ initial values and $n$ smoothing parameters. For example, in case of hourly data, a triple seasonal model for hours of day, hours of week and hours of year will have: $m_1 = 24$, $m_2 = 24 \times 7 = 168$ and $m_3= 24 \times 365 = 8760$, resulting overall in $24 + 168 + 8760 + 3 = 8955$ parameters related to seasonal components to estimate. This is not a trivial task and would take hours to converge to optimum unless the pre-initials (Section \@ref(ADAMInitialisation)) are already close to optimum. So, if you want to construct multiple seasonal ADAM ETS model, it makes sense to use a different initialisation (see discussion in Section \@ref(ADAMInitialisation)), reducing the number of estimated parameters. A possible solution in this case is backcasting (Subsection \@ref(ADAMInitialisationOptAndBack)). The number of parameters in our example would reduce from 8955 to 3 (smoothing parameters), substantially speeding up the model estimation process.
 
-Another consideration is a fitting model to the data. In the conventional ETS, the size of the transition matrix is equal to the number of initial states, which makes it too slow to be practical on high-frequency data (multiplication of a $61498 \times 61498$ matrix by a vector is a challenging task even for modern computers). But due to the lagged structure of the ADAM (discussed in Section \@ref(ADAMETSIntroduction)), construction of multiple seasonal models does not take as much time for ADAM ETS because we end up multiplying a matrix of $3 \times 3$ by a vector with three rows (skipping level and trend, which would add two more elements). So, in ADAM, the main computational burden comes from recursive relation in the state space model's transition equation because this operation needs to be repeated at least $T$ times, whatever the sample size $T$ is. This is still a computationally expensive task, so you would want to get to the optimum with as few iterations as possible. This gives another motivation for reducing the number of parameters to estimate, and thus for using backcasting.
+Another consideration is a fitting model to the data. In the conventional ETS, the size of the transition matrix is equal to the number of initial states, which makes it too slow to be practical on high-frequency data (multiplication of a $8952 \times 8952$ matrix by a vector is a challenging task even for modern computers). But due to the lagged structure of the ADAM (discussed in Section \@ref(ADAMETSIntroduction)), construction of multiple seasonal models does not take as much time for ADAM ETS because we end up multiplying a matrix of $3 \times 3$ by a vector with three rows (skipping level and trend, which would add two more elements). So, in ADAM, the main computational burden comes from recursive relation in the state space model's transition equation because this operation needs to be repeated at least $T$ times, whatever the sample size $T$ is. This is still a computationally expensive task, so you would want to get to the optimum with as few iterations as possible. This gives another motivation for reducing the number of parameters to estimate, and thus for using backcasting.
 
 Another potential simplification would be to use deterministic seasonality for some seasonal frequencies. The possible solution, in this case, is to use explanatory variables (Section \@ref(ADAMX)) for the higher frequency states (see discussion in Section \@ref(ETSXMultipleSeasonality)) or use multiple seasonal ETS, setting some of smoothing parameters to zero.
 
@@ -89,7 +89,7 @@ The situation becomes even more complicated when the model has more than two sea
 The first is based on the idea of @DeLivera2010 and the dynamic ETSX (discussed in Section \@ref(ADAMXDynamic)). In this case, we generate fourier series and use them as explanatory variables in the model, turning on the mechanism of adaptation. For example, for the pure additive model, in this case, we will have:
 \begin{equation}
   \begin{aligned}
-    & {y}_{t} = \hat{y}_t + \sum_{i=1}^p a_{i,t-1} x_{i,t} + \epsilon_t \\
+    & {y}_{t} = \breve{y}_t + \sum_{i=1}^p a_{i,t-1} x_{i,t} + \epsilon_t \\
     & \vdots \\
     & a_{i,t} = a_{i,t-1} + \delta_i \frac{\epsilon_t}{x_{i,t}} \text{ for each } i \in \{1, \dots, p\}
   \end{aligned},
