--- a/index.Rmd
+++ b/index.Rmd
@@ -27,13 +27,13 @@ In a more wide sense, this book is written for data scientists, computer scienti
 
 ### What is ADAM? {-}
 
-ADAM stands for "Augmented Dynamic Adaptive Model". The term "adaptive model" means that the parameters of the model change over time according to some assumed process. The word "dynamic" reflects the idea that the model has time series related components (ETS, ARIMA). Finally, the word "augmented" is included because ADAM is the model that supports additional features not included in the conventional ETS/ARIMA. ADAM is a unified framework for constructing ETS/ARIMA/regression, based on more advanced statistical instruments. For example, classical ARIMA is built on the assumption of normality of the error term, but ADAM lifts this assumption and allows for using other distributions as well (e.g. Generalised Normal, Inverse Gaussian, etc; see Section \@ref(#distributions)). Another example, typically the conventional models are estimated either via the maximisation of the likelihood function or using basic losses like [MSE or MAE](#errorMeasures), but ADAM includes a broader spectrum of losses and allows using custom ones. There is much more, and we will discuss different aspects of ADAM in detail later in this monograph. The ADAM includes:
+ADAM stands for "Augmented Dynamic Adaptive Model". The term "adaptive model" means that the parameters of the model change over time according to some assumed process. The word "dynamic" reflects the idea that the model has time series related components (ETS, ARIMA). Finally, the word "augmented" is included because ADAM is the model that supports additional features not included in the conventional ETS/ARIMA. ADAM is a unified framework for constructing ETS/ARIMA/regression, based on more advanced statistical instruments. For example, classical ARIMA is built on the assumption of normality of the error term, but ADAM lifts this assumption and allows for using other distributions as well (e.g. Generalised Normal, Inverse Gaussian, etc; see Section \@ref(#distributions)). Another example: typically the conventional models are estimated either via the maximisation of the likelihood function or using basic losses like MSE or MAE (see Section \@ref(errorMeasures)), but ADAM includes a broader spectrum of losses and allows using custom ones. There is much more, and we will discuss different aspects of ADAM in detail later in this monograph. Here is a brief list of ADAM features:
 
 1. ETS;
 2. ARIMA;
 3. Regression;
 4. TVP regression;
-5. Combination of (1), (2) and either (3), or (4);
+5. Combination of (1), (2), and either (3) or (4);
 6. Automatic selection/combination of states for ETS;
 7. Automatic orders selection for ARIMA;
 8. Variables selection for regression;
@@ -44,7 +44,7 @@ ADAM stands for "Augmented Dynamic Adaptive Model". The term "adaptive model" me
 13. Modelling scale of distribution (GARCH and beyond);
 14. Handling uncertainty of estimates of parameters.
 
-All these extensions are needed to solve specific real life problems, so we will include examples and case studies later in the book to see how all of this can be used. The `adam()` function from `smooth` package for R implements ADAM and supports the following features:
+All these extensions are needed to solve specific real life problems, so we will include examples and case studies later in the book to see how all of this can be used. The `adam()` function from the `smooth` package for R implements ADAM and supports the following features:
 
 1. Model diagnostics using `plot()` and other methods;
 2. Confidence intervals for parameters of models;
@@ -54,11 +54,11 @@ All these extensions are needed to solve specific real life problems, so we will
 6. Fine-tuning of initial values of the state vector (e.g. level / trend / seasonality);
 7. Two initialisation options (optimal / backcasting);
 8. Advanced and custom loss functions;
-9. Manual patameters for ETS, ARMA and regression;
+9. Manual parameters for ETS, ARMA, and regression;
 10. Fine-tuning of the optimiser (selection of optimisation algorithm and convergence criteria);
 11. Scale model via the `sm()` method.
 
-This monograph uses two packages from R, namely `greybox`, which focuses on forecasting using regression models, and `smooth`, which implements Single Source of Error (SSOE) state space models for time series analysis and forecasting. The monograph focuses on explaining how ADAM, one of the `smooth` functions (introduced in v3.0.0) works, also showing how it can be used in practice with examples from R.
+This monograph uses two packages from R, namely `greybox`, which focuses on forecasting using regression models, and `smooth`, which implements Single Source of Error (SSOE) state space models for time series analysis and forecasting. The monograph focuses on explaining how ADAM, one of the `smooth` functions (introduced in v3.0.0), works, also showing how it can be used in practice with examples from R.
 
 
 If you want to run examples from the monograph, two R packages are needed [@R-greybox; @R-smooth]:
@@ -93,26 +93,27 @@ library("formatR")
 You can use the following to cite the online version of this book:
 
 ::: adamCitation
-- Svetunkov, I. (2022) Forecasting and Analytics with ADAM. Monograph. OpenForecast. Lancaster, UK. www.openforecast.org/adam. Accessed on [current date].
+Svetunkov, I. (2023). Forecasting and Analytics with the Augmented Dynamic Adaptive Model (ADAM) (1st ed.). Chapman and Hall/CRC. https://doi.org/10.1201/9781003452652
 :::
 
 If you use LaTeX, the following can be used instead:
 
 ```{r eval=FALSE}
-@MISC{SvetunkovAdam,
-    title = {Forecasting and Analytics with ADAM},
+@book{SvetunkovAdam,
     author = {Ivan Svetunkov},
-    howpublished = {Monograph. OpenForecast},
-    note = {(version: [current date])},
+    isbn = {978-1-003-45265-2},
+    publisher = {Chapman and Hall/CRC},
+    title = {Forecasting and Analytics with the Augmented Dynamic Adaptive Model (ADAM)},
+    doi = {10.1201/9781003452652},
     url = {https://openforecast.org/adam/},
-    year = {2022}
+    year = {2023}
 }
 ```
 
 
 ### License {-}
 
-This monograph is licensed under [Creative Common License by-nc-sa 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/), which means that you can share, copy, redistribute and remix the content of the monograph for non-commercial purposes as long as you give appropriate credit to the author and provide the link to the original license. If you remix, transform, or build upon the material, you must distribute your contributions under the same CC-BY-NC-SA 4.0 license. See [the explanation on the Creative Commons website](https://creativecommons.org/licenses/by-nc-sa/4.0/).
+This monograph is licensed under [Creative Common License by-nc-sa 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/), which means that you can share, copy, redistribute, and remix the content of the monograph for non-commercial purposes as long as you give appropriate credit to the author and provide the link to the original license. If you remix, transform, or build upon the material, you must distribute your contributions under the same CC-BY-NC-SA 4.0 license. See [the explanation on the Creative Commons website](https://creativecommons.org/licenses/by-nc-sa/4.0/).
 
 ### Acknowledgments {-}
 I would like to thank Robert Fildes for his comments about this book and helping in shaping it into a monograph and J. Keith Ord for his invaluable suggestions for improvement of the monograph. I also would like to thank Tobias Schmidt and Benedikt Sonnleitner for correcting grammatical mistakes.
